add bootstrap styles

--- a/src/translations/en-US.json
+++ b/src/translations/en-US.json
@@ -25,5 +25,6 @@
   "use case": "use case",
   "customer type": "customer type",
   "customer Number": "customer Number",
-  "view request": "view request"
+  "view request": "view request",
+  "leasing": "leasing"
 }
