--- a/src/translations/fa-IR.json
+++ b/src/translations/fa-IR.json
@@ -25,5 +25,6 @@
   "use case": "نوع استفاده",
   "customer type": "نوع مشتری",
   "customer Number": "شماره مشتری",
-  "view request": "نمایش درخواست"
+  "view request": "نمایش درخواست",
+  "leasing": "لیزینگ"
 }
